--- a/style/layouts/_header.scss
+++ b/style/layouts/_header.scss
@@ -122,22 +122,26 @@ header.big-screen {
   nav{
     position: fixed;
     // top: -640px;
-    top: 0px;
+    // top: 0px;
+    top: 50%;
     left: 50%;
     // right: 0;
-    transform: translate(-50%, -1200px);
-    display: none;
-    // height: 0vh;
+    // transform: translate(-50%, -1200px);
+    transform: translate(-50%, -50%);
+    clip-path: circle(0% at 50% 0);
+    // display: none;
     height: 100vh;
     width: 100vw;
-    // display: flex;
+    display: flex;
     flex-direction: column;
     align-items: flex-start;
     justify-content: center;
     background-color: $primary-background;
     padding:0px 48px 0 310px;
-    // padding:80px 0 0 0;
-    transition: all .7s ease;
+    // transition: all .7s ease;
+    transition: all .7s cubic-bezier(0.77,-0.01, 0.59, 0.87);
+
+
     // transition: all .7s cubic-bezier(0.24, 0.18, 0, 1.25);
     // z-index: 99999;
 
