--- a/style/pages/home.css
+++ b/style/pages/home.css
@@ -329,13 +329,17 @@ header.big-screen .menu-btn button .menu-icon div {
 
 header.big-screen nav {
   position: fixed;
-  top: 0px;
+  top: 50%;
   left: 50%;
-  -webkit-transform: translate(-50%, -1200px);
-          transform: translate(-50%, -1200px);
-  display: none;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  -webkit-clip-path: circle(0% at 50% 0);
+          clip-path: circle(0% at 50% 0);
   height: 100vh;
   width: 100vw;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
@@ -348,8 +352,8 @@ header.big-screen nav {
           justify-content: center;
   background-color: #FFFFFF;
   padding: 0px 48px 0 310px;
-  -webkit-transition: all .7s ease;
-  transition: all .7s ease;
+  -webkit-transition: all 0.7s cubic-bezier(0.77, -0.01, 0.59, 0.87);
+  transition: all 0.7s cubic-bezier(0.77, -0.01, 0.59, 0.87);
 }
 
 header.big-screen nav ul {
