--- a/style/abstracts/_animations.scss
+++ b/style/abstracts/_animations.scss
@@ -15,3 +15,14 @@
     }
   }
   
+  @keyframes itemAppear {
+    0% {
+      clip-path: polygon(0 100%, 100% 100%, 100% 100%, 0% 100%);
+      transform: translateY(25px);
+    }
+    
+    100% {
+      transform: translateY(0px);
+      clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
+    }
+  }
