--- a/style/layouts/_footer.scss
+++ b/style/layouts/_footer.scss
@@ -162,21 +162,21 @@ footer.small-screen {
 
 /* MEDIA QUERIES STARTS */
 /* 1160px */
-@media only screen and (max-width: 1160px) {
-    footer.big-screen {
-       display: none;
-     }
-    footer.small-screen {
-       display: block;
-     }
- }
-/* 1161px */
-@media only screen and (min-width: 1161px) {
-     footer.big-screen {
-        display: block;
-      }
-     footer.small-screen {
-        display: none;
-      }
- }
+// @media only screen and (max-width: 1160px) {
+//     footer.big-screen {
+//        display: none;
+//      }
+//     footer.small-screen {
+//        display: block;
+//      }
+//  }
+// /* 1161px */
+// @media only screen and (min-width: 1161px) {
+//      footer.big-screen {
+//         display: block;
+//       }
+//      footer.small-screen {
+//         display: none;
+//       }
+//  }
  /* MEDIA QUERIES ENDS */
