--- a/style/pages/home.css
+++ b/style/pages/home.css
@@ -89,7 +89,7 @@ body {
 ::-webkit-scrollbar {
   -webkit-transition: all 0.8s ease-in;
   transition: all 0.8s ease-in;
-  width: 10px;
+  width: 0px;
 }
 
 ::-webkit-scrollbar-track {
@@ -177,6 +177,24 @@ header.big-screen {
   height: 80px;
   z-index: 9999;
   padding: 20px 80px;
+}
+
+@media only screen and (max-width: 1100px) {
+  header.big-screen {
+    padding: 20px 60px;
+  }
+}
+
+@media only screen and (max-width: 700px) {
+  header.big-screen {
+    padding: 20px 40px;
+  }
+}
+
+@media only screen and (max-width: 400px) {
+  header.big-screen {
+    padding: 20px 30px;
+  }
 }
 
 header.big-screen .logo {
@@ -465,56 +483,8 @@ header.big-screen nav ul.contact li a {
           transform: translateY(20px);
 }
 
-/* HEADER FOR SMALL SCREENS */
-header.small-screen {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  width: 100vw;
-  height: 80px;
-  z-index: 999;
-  padding: 22px 48px;
-}
-
 /* MEDIA QUERIES STARTS */
 /* 1160px */
-@media only screen and (max-width: 1160px) {
-  header.big-screen {
-    display: none;
-  }
-  header.small-screen {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-  }
-}
-
-/* 1161px */
-@media only screen and (min-width: 1161px) {
-  header.big-screen {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-  }
-  header.small-screen {
-    display: none;
-  }
-}
-
 /* MEDIA QUERIES ENDS */
 /* FOOTER FOR BIG SCREENS */
 footer#contact.big-screen {
@@ -758,25 +728,6 @@ footer.small-screen {
 
 /* MEDIA QUERIES STARTS */
 /* 1160px */
-@media only screen and (max-width: 1160px) {
-  footer.big-screen {
-    display: none;
-  }
-  footer.small-screen {
-    display: block;
-  }
-}
-
-/* 1161px */
-@media only screen and (min-width: 1161px) {
-  footer.big-screen {
-    display: block;
-  }
-  footer.small-screen {
-    display: none;
-  }
-}
-
 /* MEDIA QUERIES ENDS */
 main {
   width: 100vw;
@@ -946,6 +897,21 @@ main section#services .services-container {
           align-items: center;
 }
 
+@media only screen and (max-width: 1250px) {
+  main section#services .services-container {
+    grid-gap: 60px;
+  }
+}
+
+@media only screen and (max-width: 1150px) {
+  main section#services .services-container {
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+    -ms-grid-rows: 1fr 1fr 1fr 1fr;
+        grid-template-rows: 1fr 1fr 1fr 1fr;
+  }
+}
+
 main section#services .services-container article.service {
   width: 500px;
   height: 100%;
@@ -971,7 +937,29 @@ main section#services .services-container article.service {
   transition: all .3s ease;
 }
 
+@media only screen and (max-width: 1550px) {
+  main section#services .services-container article.service {
+    width: 480px;
+  }
+}
+
+@media only screen and (max-width: 1250px) {
+  main section#services .services-container article.service {
+    width: 464px;
+    height: 160px;
+  }
+}
+
+@media only screen and (max-width: 1150px) {
+  main section#services .services-container article.service {
+    width: 500px;
+    height: 100%;
+  }
+}
+
 main section#services .services-container article.service img.service__pattern {
+  width: 100%;
+  height: 100%;
   margin-right: 30px;
 }
 
@@ -993,6 +981,18 @@ main section#services .services-container article.service div.service__info {
 
 main section#services .services-container article.service div.service__info h3 {
   margin-bottom: 15px;
+}
+
+@media only screen and (max-width: 1250px) {
+  main section#services .services-container article.service div.service__info h3 {
+    margin-bottom: 10px;
+  }
+}
+
+@media only screen and (max-width: 1150px) {
+  main section#services .services-container article.service div.service__info h3 {
+    margin-bottom: 15px;
+  }
 }
 
 main section#services .services-container article.service div.service__info p {
@@ -1046,6 +1046,12 @@ main section#projects {
           align-items: center;
 }
 
+@media only screen and (max-width: 1550px) {
+  main section#projects {
+    margin: 0px 60px 80px 60px;
+  }
+}
+
 main section#projects h2 {
   width: 40%;
   margin-bottom: 100px;
@@ -1053,21 +1059,26 @@ main section#projects h2 {
 }
 
 main section#projects .projects-container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 1fr 1fr 1fr;
+      grid-template-columns: 1fr 1fr 1fr 1fr;
+  -ms-grid-rows: auto;
+      grid-template-rows: auto;
+  grid-gap: 60px;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  justify-content: center;
-  align-items: center;
+}
+
+@media only screen and (max-width: 1550px) {
+  main section#projects .projects-container {
+    -ms-grid-columns: 1fr 1fr;
+        grid-template-columns: 1fr 1fr;
+  }
 }
 
 main section#projects .projects-container article.project {
@@ -1093,8 +1104,10 @@ main section#projects .projects-container article.project {
   transition: all .3s ease;
 }
 
-main section#projects .projects-container article.project:not(:last-child) {
-  margin-right: 60px;
+@media only screen and (max-width: 1550px) {
+  main section#projects .projects-container article.project {
+    width: 360px;
+  }
 }
 
 main section#projects .projects-container article.project:hover {
