--- a/style/components/_services-section.scss
+++ b/style/components/_services-section.scss
@@ -25,6 +25,14 @@ section#services{
         grid-gap: 80px;
         justify-content: center;
         align-items: center;
+
+        @media only screen and (max-width: 1250px) {
+            grid-gap: 60px;
+        }
+        @media only screen and (max-width: 1150px) {
+            grid-template-columns: 1fr;
+            grid-template-rows: 1fr 1fr 1fr 1fr;
+        }
     article.service{
         width: 500px;
         height: 100%;
@@ -43,7 +51,21 @@ section#services{
         //     box-shadow: 1px 4px 4px 1px rgba(57, 19, 184, 0.05);
         // }
 
+        @media only screen and (max-width: 1550px) {
+            width: 480px;
+        }
+        @media only screen and (max-width: 1250px) {
+            width: 464px;
+            height: 160px;
+        }
+        @media only screen and (max-width: 1150px) {
+            width: 500px;
+            height: 100%;
+        }
+
         img.service__pattern {
+            width: 100%;
+            height: 100%;
             margin-right: 30px;
            
         }
@@ -55,6 +77,12 @@ section#services{
 
             h3{
                 margin-bottom: 15px;
+                @media only screen and (max-width: 1250px) {
+                    margin-bottom: 10px;
+                }
+                @media only screen and (max-width: 1150px) {
+                    margin-bottom: 15px;
+                }
             }
             p{
                 font-size: $paragraph-font-size-3;
