--- a/style/layouts/_header.scss
+++ b/style/layouts/_header.scss
@@ -18,6 +18,16 @@ header.big-screen {
     // border: $border-check-1;
 
 
+@media only screen and (max-width: 1100px) {
+  padding: 20px 60px;
+ }
+
+@media only screen and (max-width: 700px) {
+  padding: 20px 40px;
+ }
+@media only screen and (max-width: 400px) {
+  padding: 20px 30px;
+ }
     
     
     .logo{
@@ -263,44 +273,27 @@ header.big-screen {
 
 }
 
-/* HEADER FOR SMALL SCREENS */
-header.small-screen{
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    // background-color: $main-blue;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-    width: 100vw;
-    height: 80px;
-    z-index: 999;
-    padding: 22px 48px;
 
-  
-}
 
 
 
 /* MEDIA QUERIES STARTS */
 /* 1160px */
-@media only screen and (max-width: 1160px) {
-    header.big-screen {
-        display: none;
-      }
-    header.small-screen {
-       display: flex;
-     }
- }
-/* 1161px */
-@media only screen and (min-width: 1161px) {
-    header.big-screen {
-        display: flex;
-      }
-    header.small-screen {
-       display: none;
-     }
- }
+// @media only screen and (max-width: 1160px) {
+//     header.big-screen {
+//         display: none;
+//       }
+//     header.small-screen {
+//        display: flex;
+//      }
+//  }
+// /* 1161px */
+// @media only screen and (min-width: 1161px) {
+//     header.big-screen {
+//         display: flex;
+//       }
+//     header.small-screen {
+//        display: none;
+//      }
+//  }
  /* MEDIA QUERIES ENDS */
