--- a/style/components/_services-section.scss
+++ b/style/components/_services-section.scss
@@ -33,6 +33,11 @@ section#services{
             grid-template-columns: 1fr;
             grid-template-rows: 1fr 1fr 1fr 1fr;
         }
+
+        @media only screen and (max-width: 800px) {
+            grid-gap: 40px;
+            
+        }
     article.service{
         width: 500px;
         height: 100%;
@@ -64,8 +69,8 @@ section#services{
         }
 
         img.service__pattern {
-            width: 100%;
-            height: 100%;
+            width: 200px;
+            height: 200px;
             margin-right: 30px;
            
         }
