--- a/style/pages/home.css
+++ b/style/pages/home.css
@@ -912,6 +912,12 @@ main section#services .services-container {
   }
 }
 
+@media only screen and (max-width: 800px) {
+  main section#services .services-container {
+    grid-gap: 40px;
+  }
+}
+
 main section#services .services-container article.service {
   width: 500px;
   height: 100%;
@@ -958,8 +964,8 @@ main section#services .services-container article.service {
 }
 
 main section#services .services-container article.service img.service__pattern {
-  width: 100%;
-  height: 100%;
+  width: 200px;
+  height: 200px;
   margin-right: 30px;
 }
 
@@ -1081,10 +1087,24 @@ main section#projects .projects-container {
   }
 }
 
+@media only screen and (max-width: 800px) {
+  main section#projects .projects-container {
+    grid-gap: 40px;
+  }
+}
+
+@media only screen and (max-width: 700px) {
+  main section#projects .projects-container {
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+  }
+}
+
 main section#projects .projects-container article.project {
   width: 300px;
   height: auto;
-  background-color: #007AFF;
+  -webkit-box-shadow: 1px 25px 25px -5px rgba(57, 19, 184, 0.05);
+          box-shadow: 1px 25px 25px -5px rgba(57, 19, 184, 0.05);
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1110,15 +1130,34 @@ main section#projects .projects-container article.project {
   }
 }
 
+@media only screen and (max-width: 900px) {
+  main section#projects .projects-container article.project {
+    width: 300px;
+  }
+}
+
+@media only screen and (max-width: 800px) {
+  main section#projects .projects-container article.project {
+    width: 260px;
+  }
+}
+
+@media only screen and (max-width: 700px) {
+  main section#projects .projects-container article.project {
+    width: 360px;
+  }
+}
+
 main section#projects .projects-container article.project:hover {
   -webkit-transform: translateY(4px);
           transform: translateY(4px);
+  -webkit-box-shadow: none;
+          box-shadow: none;
 }
 
 main section#projects .projects-container article.project img.project__image {
   width: 100%;
   height: auto;
-  opacity: .96;
 }
 
 main section#projects .projects-container article.project:nth-child(1) div.project__info {
