added responsiveness (services)

--- a/style/pages/home.css
+++ b/style/pages/home.css
@@ -875,6 +875,18 @@ main section#services {
           align-items: center;
 }
 
+@media only screen and (max-width: 1550px) {
+  main section#services {
+    margin: 0px 60px 80px 60px;
+  }
+}
+
+@media only screen and (max-width: 400px) {
+  main section#services {
+    margin: 0px 40px 80px 40px;
+  }
+}
+
 main section#services h2 {
   width: 56%;
   margin-bottom: 100px;
@@ -918,6 +930,24 @@ main section#services .services-container {
   }
 }
 
+@media only screen and (max-width: 500px) {
+  main section#services .services-container {
+    grid-row-gap: 40px;
+    grid-column-gap: 0px;
+    -ms-grid-columns: 260px;
+        grid-template-columns: 260px;
+    -ms-grid-rows: (auto)[4];
+        grid-template-rows: repeat(4, auto);
+  }
+}
+
+@media only screen and (max-width: 440px) {
+  main section#services .services-container {
+    -ms-grid-columns: 240px;
+        grid-template-columns: 240px;
+  }
+}
+
 main section#services .services-container article.service {
   width: 500px;
   height: 100%;
@@ -951,7 +981,7 @@ main section#services .services-container article.service {
 
 @media only screen and (max-width: 1250px) {
   main section#services .services-container article.service {
-    width: 464px;
+    width: 460px;
     height: 160px;
   }
 }
@@ -963,10 +993,51 @@ main section#services .services-container article.service {
   }
 }
 
+@media only screen and (max-width: 600px) {
+  main section#services .services-container article.service {
+    width: 460px;
+    height: 160px;
+  }
+}
+
+@media only screen and (max-width: 550px) {
+  main section#services .services-container article.service {
+    width: 400px;
+    height: 140px;
+    padding: 0 20px 0 0;
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  main section#services .services-container article.service {
+    width: 260px;
+    height: 100%;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    padding: 0 0px 0 0;
+  }
+}
+
 main section#services .services-container article.service img.service__pattern {
-  width: 200px;
-  height: 200px;
+  width: auto;
+  height: 100%;
   margin-right: 30px;
+}
+
+@media only screen and (max-width: 550px) {
+  main section#services .services-container article.service img.service__pattern {
+    margin-right: 20px;
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  main section#services .services-container article.service img.service__pattern {
+    width: 100%;
+    height: auto;
+    margin-right: 0px;
+  }
 }
 
 main section#services .services-container article.service div.service__info {
@@ -985,6 +1056,12 @@ main section#services .services-container article.service div.service__info {
           align-items: flex-start;
 }
 
+@media only screen and (max-width: 500px) {
+  main section#services .services-container article.service div.service__info {
+    padding: 30px;
+  }
+}
+
 main section#services .services-container article.service div.service__info h3 {
   margin-bottom: 15px;
 }
@@ -998,6 +1075,13 @@ main section#services .services-container article.service div.service__info h3 {
 @media only screen and (max-width: 1150px) {
   main section#services .services-container article.service div.service__info h3 {
     margin-bottom: 15px;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  main section#services .services-container article.service div.service__info h3 {
+    margin-bottom: 10px;
+    font-size: 18px;
   }
 }
 
@@ -1055,6 +1139,12 @@ main section#projects {
 @media only screen and (max-width: 1550px) {
   main section#projects {
     margin: 0px 60px 80px 60px;
+  }
+}
+
+@media only screen and (max-width: 400px) {
+  main section#projects {
+    margin: 0px 40px 80px 40px;
   }
 }
 
@@ -1148,6 +1238,24 @@ main section#projects .projects-container article.project {
   }
 }
 
+@media only screen and (max-width: 450px) {
+  main section#projects .projects-container article.project {
+    width: 300px;
+  }
+}
+
+@media only screen and (max-width: 360px) {
+  main section#projects .projects-container article.project {
+    width: 260px;
+  }
+}
+
+@media only screen and (max-width: 320px) {
+  main section#projects .projects-container article.project {
+    width: 230px;
+  }
+}
+
 main section#projects .projects-container article.project:hover {
   -webkit-transform: translateY(4px);
           transform: translateY(4px);
@@ -1200,6 +1308,12 @@ main section#projects .projects-container article.project div.project__info {
           transform: translate(-50%, -50%);
   -webkit-transition: all .3s ease;
   transition: all .3s ease;
+}
+
+@media only screen and (max-width: 360px) {
+  main section#projects .projects-container article.project div.project__info {
+    padding: 24px 24px 40px 24px;
+  }
 }
 
 main section#projects .projects-container article.project div.project__info h3 {
