--- a/style/components/_projects-section.scss
+++ b/style/components/_projects-section.scss
@@ -14,7 +14,9 @@ main{
         @media only screen and (max-width: 1550px) {
             margin: 0px 60px 80px 60px;
         }
-
+        @media only screen and (max-width: 400px) {
+            margin: 0px 40px 80px 40px;
+        }
         h2{
             width: 40%;
             margin-bottom: 100px;
@@ -79,6 +81,18 @@ main{
                 width: 360px;
                 
             }
+            @media only screen and (max-width: 450px) {
+                width: 300px;
+                
+            }
+            @media only screen and (max-width: 360px) {
+                width: 260px;
+                
+            }
+            @media only screen and (max-width: 320px) {
+                width: 230px;
+                
+            }
             
     
             &:hover{
@@ -131,6 +145,10 @@ main{
                 left: 50%;
                 transform: translate(-50%,-50%);
                 transition: all .3s ease;
+                @media only screen and (max-width: 360px) {
+                    padding: 24px 24px 40px 24px;
+                    
+                }
                
 
                 h3{
