--- a/style/components/_services-section.scss
+++ b/style/components/_services-section.scss
@@ -10,6 +10,14 @@ section#services{
     flex-direction: column;
     justify-content: center;
     align-items: center;
+
+    @media only screen and (max-width: 1550px) {
+        margin: 0px 60px 80px 60px;
+    }
+    @media only screen and (max-width: 400px) {
+        margin: 0px 40px 80px 40px;
+    }
+
     h2{
         width: 56%;
         margin-bottom: 100px;
@@ -38,6 +46,18 @@ section#services{
             grid-gap: 40px;
             
         }
+        @media only screen and (max-width: 500px) {
+            grid-row-gap: 40px;
+            grid-column-gap: 0px;
+            grid-template-columns: 260px;
+            grid-template-rows: repeat(4, auto);
+
+        }
+        @media only screen and (max-width: 440px) {
+           
+            grid-template-columns: 240px;
+
+        }
     article.service{
         width: 500px;
         height: 100%;
@@ -60,18 +80,43 @@ section#services{
             width: 480px;
         }
         @media only screen and (max-width: 1250px) {
-            width: 464px;
+            width: 460px;
             height: 160px;
         }
         @media only screen and (max-width: 1150px) {
             width: 500px;
             height: 100%;
         }
+        
+        @media only screen and (max-width: 600px) {
+            width: 460px;
+            height: 160px;
+            
+        }
+        @media only screen and (max-width: 550px) {
+            width: 400px;
+            height: 140px;
+            padding: 0 20px 0 0;
+        }
+        @media only screen and (max-width: 500px) {
+            width: 260px;
+            height: 100%;
+            flex-direction: column;
+            padding: 0 0px 0 0;
+        }
 
         img.service__pattern {
-            width: 200px;
-            height: 200px;
+            width: auto;
+            height: 100%;
             margin-right: 30px;
+            @media only screen and (max-width: 550px) {
+                margin-right: 20px;
+            }
+            @media only screen and (max-width: 500px) {
+                width: 100%;
+                height: auto;
+                margin-right: 0px;
+            }
            
         }
         div.service__info{
@@ -79,7 +124,9 @@ section#services{
             flex-direction: column;
             justify-content: center;
             align-items: flex-start;
-
+            @media only screen and (max-width: 500px) {
+                 padding: 30px;
+            }
             h3{
                 margin-bottom: 15px;
                 @media only screen and (max-width: 1250px) {
@@ -88,10 +135,18 @@ section#services{
                 @media only screen and (max-width: 1150px) {
                     margin-bottom: 15px;
                 }
+                @media only screen and (max-width: 600px) {
+                    margin-bottom: 10px;
+                    font-size: 18px;
+                }
             }
             p{
                 font-size: $paragraph-font-size-3;
                 line-height: 17px;
+                // @media only screen and (max-width: 400px) {
+                //     font-size: 14px;
+                   
+                // }
             }
         }
 
