--- a/style/components/_about-section.scss
+++ b/style/components/_about-section.scss
@@ -11,10 +11,23 @@ section#about{
     flex-direction: column;
     justify-content: center;
     align-items: center;
+
+    @media only screen and (max-width: 1550px) {
+        margin: 0px 60px 80px 60px;
+    }
+    @media only screen and (max-width: 400px) {
+        margin: 0px 40px 80px 40px;
+    }
     h2{
         width: 56%;
         margin-bottom: 80px;
         text-align: center;
+
+        @media only screen and (max-width: 600px) {
+            width: 100%;
+            font-size: 28px;
+        }
+        
     }
     p{
         line-height: 30px;
@@ -23,6 +36,13 @@ section#about{
         &:not(:last-child){
             margin-bottom: 40px;
 
+        }
+
+        @media only screen and (max-width: 1500px) {
+            width: 80%;
+        }
+        @media only screen and (max-width: 1100px) {
+            width: 90%;
         }
     }
 }
