--- a/style/components/_hero-section.scss
+++ b/style/components/_hero-section.scss
@@ -8,6 +8,9 @@ main{
         @include center;
 
         // border: $border-check-1;
+        @media only screen and (max-width: 900px) {
+            padding: 0px 60px;
+        }
 
     section#hero{
         width: 100%;
@@ -19,16 +22,47 @@ main{
         justify-content: center;
         align-items: center;
         // border: $border-check-2;
+
+        @media only screen and (max-width: 1550px) {
+            margin: 60px 60px 0px 60px;
+        }
+        @media only screen and (max-width: 400px) {
+            margin: 60px 40px 0px 40px;
+        }
         h1{
             width: 60%;
             margin-bottom: 40px;
             text-align: center;
+            @media only screen and (max-width: 1486px) {
+                width: 90%;
+            }
+            @media only screen and (max-width: 1200px) {
+                font-size: 48px;
+                width: 100%;
+            }
+            @media only screen and (max-width: 1000px) {
+                font-size: 42px;
+                line-height: 56px;
+            }
+            @media only screen and (max-width: 700px) {
+                font-size: 42px;
+                line-height: 56px;
+            }
+            
+            
         }
         p{
             line-height: 30px;
             width: 50%;
             text-align: center;
             margin-bottom: 60px;
+
+            @media only screen and (max-width: 1200px) {
+                width: 60%;
+            }
+            @media only screen and (max-width: 1000px) {
+                width: 80%;
+            }
         }
 
         a{
