--- a/style/components/_services-section.scss
+++ b/style/components/_services-section.scss
@@ -22,6 +22,9 @@ section#services{
         width: 56%;
         margin-bottom: 100px;
         text-align: center;
+        @media only screen and (max-width: 1100px) {
+            width: 90%;
+        }
     }
    
 
