--- a/style/components/_team-section.scss
+++ b/style/components/_team-section.scss
@@ -14,6 +14,13 @@ main{
             width: 40%;
             margin-bottom: 100px;
             text-align: center;
+            @media only screen and (max-width: 1100px) {
+                width: 90%;
+            }
+            @media only screen and (max-width: 600px) {
+                width: 100%;
+                font-size: 28px;
+            }
         }
        
     
