--- a/style/pages/home.css
+++ b/style/pages/home.css
@@ -750,6 +750,12 @@ main {
           align-items: center;
 }
 
+@media only screen and (max-width: 900px) {
+  main {
+    padding: 0px 60px;
+  }
+}
+
 main section#hero {
   width: 100%;
   height: auto;
@@ -770,10 +776,49 @@ main section#hero {
           align-items: center;
 }
 
+@media only screen and (max-width: 1550px) {
+  main section#hero {
+    margin: 60px 60px 0px 60px;
+  }
+}
+
+@media only screen and (max-width: 400px) {
+  main section#hero {
+    margin: 60px 40px 0px 40px;
+  }
+}
+
 main section#hero h1 {
   width: 60%;
   margin-bottom: 40px;
   text-align: center;
+}
+
+@media only screen and (max-width: 1486px) {
+  main section#hero h1 {
+    width: 90%;
+  }
+}
+
+@media only screen and (max-width: 1200px) {
+  main section#hero h1 {
+    font-size: 48px;
+    width: 100%;
+  }
+}
+
+@media only screen and (max-width: 1000px) {
+  main section#hero h1 {
+    font-size: 42px;
+    line-height: 56px;
+  }
+}
+
+@media only screen and (max-width: 700px) {
+  main section#hero h1 {
+    font-size: 42px;
+    line-height: 56px;
+  }
 }
 
 main section#hero p {
@@ -781,6 +826,18 @@ main section#hero p {
   width: 50%;
   text-align: center;
   margin-bottom: 60px;
+}
+
+@media only screen and (max-width: 1200px) {
+  main section#hero p {
+    width: 60%;
+  }
+}
+
+@media only screen and (max-width: 1000px) {
+  main section#hero p {
+    width: 80%;
+  }
 }
 
 main section#hero a {
@@ -839,10 +896,29 @@ main section#about {
           align-items: center;
 }
 
+@media only screen and (max-width: 1550px) {
+  main section#about {
+    margin: 0px 60px 80px 60px;
+  }
+}
+
+@media only screen and (max-width: 400px) {
+  main section#about {
+    margin: 0px 40px 80px 40px;
+  }
+}
+
 main section#about h2 {
   width: 56%;
   margin-bottom: 80px;
   text-align: center;
+}
+
+@media only screen and (max-width: 600px) {
+  main section#about h2 {
+    width: 100%;
+    font-size: 28px;
+  }
 }
 
 main section#about p {
@@ -853,6 +929,18 @@ main section#about p {
 
 main section#about p:not(:last-child) {
   margin-bottom: 40px;
+}
+
+@media only screen and (max-width: 1500px) {
+  main section#about p {
+    width: 80%;
+  }
+}
+
+@media only screen and (max-width: 1100px) {
+  main section#about p {
+    width: 90%;
+  }
 }
 
 main section#services {
@@ -891,6 +979,12 @@ main section#services h2 {
   width: 56%;
   margin-bottom: 100px;
   text-align: center;
+}
+
+@media only screen and (max-width: 1100px) {
+  main section#services h2 {
+    width: 90%;
+  }
 }
 
 main section#services .services-container {
@@ -1154,6 +1248,19 @@ main section#projects h2 {
   text-align: center;
 }
 
+@media only screen and (max-width: 1100px) {
+  main section#projects h2 {
+    width: 90%;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  main section#projects h2 {
+    width: 100%;
+    font-size: 28px;
+  }
+}
+
 main section#projects .projects-container {
   display: -ms-grid;
   display: grid;
@@ -1394,6 +1501,19 @@ main section#team h2 {
   width: 40%;
   margin-bottom: 100px;
   text-align: center;
+}
+
+@media only screen and (max-width: 1100px) {
+  main section#team h2 {
+    width: 90%;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  main section#team h2 {
+    width: 100%;
+    font-size: 28px;
+  }
 }
 
 main section#team .members-container {
